@@ -15,8 +15,12 @@ VALUE cSignature;
 VALUE cReference;
 VALUE cTransform;
 
-static xmlNodePtr int_xmldsig_prepare_signature(xmlDocPtr doc, sign_params_t *params, transform_t *transforms);
-static void int_xmldsig_set_digest_values(transform_t *transforms);
+VALUE
+xmldsig_signature_init(xmlNodePtr signature)
+{
+    /* TODO */
+    return Qnil;
+}
 
 static VALUE
 xmldsig_reference_init(int argc, VALUE *argv, VALUE self)
@@ -25,61 +29,215 @@ xmldsig_reference_init(int argc, VALUE *argv, VALUE self)
     rb_scan_args(argc, argv, "11", &transforms, &opt_hash);
     if (NIL_P(transforms)) 
 	rb_raise(rb_eArgError, "Transforms may not be nil");
-    rb_iv_set(self, "transforms", transforms);
+    rb_ivar_set(self, sTRANSFORMS, transforms);
 
-    /* TODO: opt_hash */
+    /* TODO: opt_hash(id, type, uri) */
+
     return self;
 }
 
 static VALUE
 xmldsig_transform_init(VALUE self, VALUE algorithm)
 {
-    rb_iv_set(self, "algorithm", algorithm);
+    rb_ivar_set(self, sALGORITHM, algorithm);
     return self;
 }
 
+static xmldsig_transform *
+int_xmldsig_create_transform(xmldsig_sign_ctx *ctx, VALUE param_transform, xmlNodePtr transforms_node)
+{
+    xmlNodePtr transform_node;
+    xmldsig_transform *transform;
+    VALUE algorithm;
+
+    if (!(transform = xmldsig_transforms_new())) {
+	xmldsig_sign_ctx_free(ctx, 1);
+	rb_raise(rb_eRuntimeError, NULL);
+    }
+
+    transform_node = xmlNewChild(transforms_node, ctx->ns_dsig, N_TRANSFORM, NULL);
+    transform->node = transform_node;
+
+    algorithm = rb_ivar_get(param_transform, sALGORITHM);
+    StringValue(algorithm);
+    rb_enc_associate(algorithm, ctx->doc_encoding);
+    xmlNewProp(transforms_node, A_ALGORITHM, CHAR2BYTES(RSTRING_PTR(algorithm)));
+
+    /* TODO: XPath */
+
+    return transform;
+}
+
+#define int_xmldsig_add_prop_to_ref(node, name, value, enc)	if (!NIL_P((value))) {							\
+    								    StringValue((value));						\
+    								    rb_enc_associate((value), (enc));					\
+    								    xmlNewProp((node), (name), CHAR2BYTES(RSTRING_PTR((value)))); 	\
+    								}
+
+static xmldsig_reference *
+int_xmldsig_create_reference(xmldsig_sign_ctx *ctx, VALUE param_ref)
+{
+    xmlNodePtr ref_node, transforms_node, digest_method_node;
+    xmldsig_reference *ref;
+    rb_encoding *encoding;
+    VALUE id, uri, type, transforms, digest_method;
+    long transform_len, i;
+    xmldsig_transform *cur_transform = NULL, *prev_transform = NULL;
+
+    if (!(ref = xmldsig_reference_new())) {
+	xmldsig_sign_ctx_free(ctx, 1);
+	rb_raise(rb_eRuntimeError, NULL);
+    }
+
+    encoding = ctx->doc_encoding;
+
+    id = rb_ivar_get(param_ref, sID);
+    uri = rb_ivar_get(param_ref, sURI);
+    type = rb_ivar_get(param_ref, sTYPE);
+
+    ref_node = xmlNewChild(ctx->signed_info, ctx->ns_dsig, N_REFERENCE, NULL);
+    ref->node = ref_node;
+
+    int_xmldsig_add_prop_to_ref(ref_node, A_ID, id, encoding);
+    int_xmldsig_add_prop_to_ref(ref_node, A_TYPE, type, encoding);
+    int_xmldsig_add_prop_to_ref(ref_node, A_URI, uri, encoding);
+
+    transforms_node = xmlNewChild(ref_node, ctx->ns_dsig, N_TRANSFORMS, NULL);
+
+    transforms = rb_ivar_get(param_ref, sTRANSFORMS);
+    transform_len = RARRAY_LEN(transforms);
+
+    for (i=0; i < transform_len; i++) {
+	VALUE param_transform;
+
+	param_transform = rb_ary_entry(transforms, i);
+	cur_transform = int_xmldsig_create_transform(ctx, param_transform, transforms_node);
+
+	if (!ref->transforms) {
+	    ref->transforms = cur_transform;
+	}
+
+	cur_transform->prev = prev_transform;
+	if (prev_transform)
+	    prev_transform->next = cur_transform;
+	prev_transform = cur_transform;
+    }
+
+    digest_method_node = xmlNewChild(ref_node, ctx->ns_dsig, N_DIGEST_METHOD, NULL);
+    digest_method = rb_ivar_get(param_ref, sDIGEST_METHOD);
+    StringValue(digest_method);
+    rb_enc_associate(digest_method, encoding);
+    xmlNewProp(digest_method_node, A_ALGORITHM, CHAR2BYTES(RSTRING_PTR(digest_method)));
+
+    xmlNewChild(ref_node, ctx->ns_dsig, N_DIGEST_VALUE, NULL);
+
+    return ref;
+}
 
 static xmlNodePtr
-int_xmldsig_prepare_signature(xmlDocPtr doc, sign_params_t *params, transform_t *transforms)
+int_xmldsig_prepare_signature(xmldsig_sign_ctx *ctx, xmldsig_sign_params *params)
 {
-    /* TODO */
-    return NULL;
+    xmlNodePtr root, signature, signed_info, c14n_method, signature_method;
+    xmlNsPtr ns_dsig;
+    VALUE refs;
+    long ref_len, i;
+    xmldsig_reference *cur_ref = NULL, *prev_ref = NULL;
+
+    root = xmlDocGetRootElement(ctx->doc);
+    ns_dsig = xmlNewNs(root, NS_DSIG, NS_DSIG_PREFIX);
+    ctx->ns_dsig = ns_dsig;
+
+    signature = xmlNewChild(root, ns_dsig, N_SIGNATURE, NULL);
+    ctx->signature = signature;
+
+    signed_info = xmlNewChild(signature, ns_dsig, N_SIGNED_INFO, NULL);
+    ctx->signed_info = signed_info;
+
+    c14n_method = xmlNewChild(signed_info, ns_dsig, N_C14N_METHOD, NULL);
+    signature_method = xmlNewChild(signed_info, ns_dsig, N_SIGNATURE_METHOD, NULL);
+
+    StringValue(params->c14n_method);
+    xmlNewProp(c14n_method, A_ALGORITHM, CHAR2BYTES(RSTRING_PTR(params->c14n_method)));
+
+    StringValue(params->signature_method);
+    xmlNewProp(signature_method, A_ALGORITHM, CHAR2BYTES(RSTRING_PTR(params->signature_method)));
+
+    refs = params->references;
+    ref_len = RARRAY_LEN(refs);
+
+    for (i = 0; i < ref_len; i++) {
+	VALUE param_ref;
+
+	param_ref = rb_ary_entry(refs, i);
+	cur_ref = int_xmldsig_create_reference(ctx, param_ref);
+
+	if (!ctx->references) {
+	    ctx->references = cur_ref;
+	}
+
+	cur_ref->prev = prev_ref;
+	if (prev_ref)
+	    prev_ref->next = cur_ref;
+	prev_ref = cur_ref;
+    }
+
+    xmlNewChild(signature, ctx->ns_dsig, N_SIGNATURE_VALUE, NULL);
+    return signature;
+}
+
+static void	
+int_xmldsig_compute_references(xmldsig_sign_ctx *ctx)
+{
+    xmldsig_reference *cur_ref;
+
+    cur_ref = ctx->references;
+
+    while (cur_ref) {
+	xmldsig_transform_result *result;
+
+	result = xmldsig_transforms_execute(cur_ref->transforms);
+	if (!result->bytes) {
+	    /* need to apply a final default c14n 1.0 */
+	    result->bytes_len = xmlC14NDocDumpMemory(ctx->doc, 
+						     result->nodes, 
+						     0, 
+						     NULL, 
+						     0, 
+						     &result->bytes);
+	}
+
+	/* TODO */
+
+	xmldsig_transform_result_free(result);
+	cur_ref = cur_ref->next;
+    }
 }
 
 static void
-int_xmldsig_set_digest_values(transform_t *transforms)
+int_xmldsig_finalize_signature(xmldsig_sign_ctx *ctx)
 {
     /* TODO */
 }
 
 VALUE
-xmldsig_sig_sign(xmlDocPtr doc, sign_params_t *params)
+xmldsig_sig_sign(xmlDocPtr doc, rb_encoding *doc_encoding, xmldsig_sign_params *params)
 {
-    transform_t *transforms;
-    transform_result_t *transform_result;
-    xmlNodePtr signature_node;
+    xmldsig_sign_ctx *ctx;
+    VALUE signature;
 
-    if (!(transforms = xmldsig_transforms_new()))
+    if (!(ctx = xmldsig_sign_ctx_new()))
 	rb_raise(rb_eRuntimeError, NULL);
     
-    signature_node = int_xmldsig_prepare_signature(doc, params, transforms);
-    transform_result = xmldsig_transforms_execute(transforms);
-    int_xmldsig_set_digest_values(transforms);
+    ctx->doc = doc;
+    ctx->doc_encoding = doc_encoding;
 
-    if (!transform_result->bytes) {
-	/* need to apply a final default c14n 1.0 */
-	transform_result->bytes_len = xmlC14NDocDumpMemory(doc, 
-							   transform_result->nodes, 
-							   0, 
-							   NULL, 
-							   0, 
-							   &transform_result->bytes);
-    }
+    int_xmldsig_prepare_signature(ctx, params);
+    int_xmldsig_compute_references(ctx);
+    int_xmldsig_finalize_signature(ctx);
 
-    xmldsig_transforms_free(transforms);
-    xmldsig_transform_result_free(transform_result);
-
-    return Qnil;
+    xmldsig_sign_ctx_free(ctx, 0);
+    signature = xmldsig_signature_init(ctx->signature);
+    return signature;
 }
 
 void
@@ -90,9 +248,9 @@ Init_xmldsig_signature(void)
     rb_attr(cSignature, rb_intern("signed_info_id"), 1, 0, Qfalse);
     rb_attr(cSignature, sC14N_METHOD, 1, 0, Qfalse);
     rb_attr(cSignature, sSIGNATURE_METHOD, 1, 0, Qfalse);
+    rb_attr(cSignature, sSIGNATURE_VALUE, 1, 0, Qfalse);
     rb_attr(cSignature, sREFERENCES, 1, 0, Qfalse);
-    rb_attr(cSignature, rb_intern("signature_value"), 1, 0, Qfalse);
-    rb_attr(cSignature, rb_intern("key_value"), 1, 0, Qfalse);
+    rb_attr(cSignature, sKEY_VALUE, 1, 0, Qfalse);
     
     cReference = rb_define_class_under(mXMLDSIG, "Reference", rb_cObject);
     rb_define_method(cReference, "initialize", xmldsig_reference_init, -1);
@@ -101,10 +259,10 @@ Init_xmldsig_signature(void)
     rb_attr(cReference, sTYPE, 1, 1, Qfalse);
     rb_attr(cReference, sTRANSFORMS, 1, 1, Qfalse);
     rb_attr(cReference, sDIGEST_METHOD, 1, 1, Qfalse);
-    rb_attr(cReference, rb_intern("digest_value"), 1, 0, Qfalse);
+    rb_attr(cReference, sDIGEST_VALUE, 1, 0, Qfalse);
 
     cTransform = rb_define_class_under(mXMLDSIG, "Transform", rb_cObject);
     rb_define_method(cTransform, "initialize", xmldsig_transform_init, 1);
-    rb_attr(cTransform, rb_intern("algorithm"), 1, 1, Qfalse);
+    rb_attr(cTransform, sALGORITHM, 1, 1, Qfalse);
 }
 
